--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=laravel1.cwb1jzpmjmgj.ap-south-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=volt
+DB_USERNAME=admin
+DB_PASSWORD=12345678
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
